@@ -5,6 +5,8 @@ pcomb - combine RADIANCE pictures
 .SH SYNOPSIS
 .B pcomb
 [
+.B -h
+][
 .B -w
 ][
 .B "\-x xres"
@@ -139,6 +141,13 @@ will return a negative value, and
 .I S(n)
 will return zero.
 .PP
+The
+.I \-h
+option may be used to reduce the information header size, which
+can grow disproportionately after multiple runs of
+.I pcomb
+and/or
+.I pcompos(1).
 The
 .I \-w
 option can be used to suppress warning messages about invalid
